# RtspClientSharpCore

./: .gitignore  LICENSE  LICENSE.md  README.md
RtspClientSharpCore/: RtspClientSharpCore.sln
RtspClientSharpCore/FrameDecoderCore/: AudioConversionParameters.cs  DecodedVideoFrameParameters.cs  DecoderException.cs  FrameDecoderCore.csproj  PixelFormat.cs  ScalingPolicy.cs  ScalingQuality.cs  TransformParameters.cs
RtspClientSharpCore/FrameDecoderCore/DecodedFrames/: AudioFrameFormat.cs  DecodedAudioFrame.cs  DecodedVideoFrame.cs  IDecodedAudioFrame.cs  IDecodedVideoFrame.cs
RtspClientSharpCore/FrameDecoderCore/FFmpeg/: FFmpegAudioCodecId.cs  FFmpegAudioDecoder.cs  FFmpegAudioPInvoke.cs  FFmpegDecodedVideoScaler.cs  FFmpegPixelFormat.cs  FFmpegScalingQuality.cs  FFmpegVideoCodecId.cs  FFmpegVideoDecoder.cs  FFmpegVideoPInvokeLinux.cs  FFmpegVideoPInvokeWin.cs
RtspClientSharpCore/RtspClientSharpCore/: ConnectionParameters.cs  IRtspClient.cs  ITransportStream.cs  RequiredTracks.cs  RtpTransportProtocol.cs  RtspClient.cs
RtspClientSharpCore/RtspClientSharpCore/Codecs/: CodecInfo.cs
RtspClientSharpCore/RtspClientSharpCore/Codecs/Audio/: AACCodecInfo.cs  AudioCodecInfo.cs  G711ACodecInfo.cs  G711CodecInfo.cs  G711UCodecInfo.cs  G726CodecInfo.cs  PCMCodecInfo.cs
RtspClientSharpCore/RtspClientSharpCore/Codecs/Video/: H264CodecInfo.cs  MJPEGCodecInfo.cs  VideoCodecInfo.cs
RtspClientSharpCore/RtspClientSharpCore/MediaParsers/: AACAudioPayloadParser.cs  G711AudioPayloadParser.cs  G726AudioPayloadParser.cs  H264Parser.cs  H264ParserException.cs  H264Slicer.cs  H264VideoPayloadParser.cs  IMediaPayloadParser.cs  MJPEGVideoPayloadParser.cs  MediaPayloadParser.cs  MediaPayloadParserException.cs  PCMAudioPayloadParser.cs
RtspClientSharpCore/RtspClientSharpCore/RawFrames/: FrameType.cs  RawFrame.cs
RtspClientSharpCore/RtspClientSharpCore/RawFrames/Audio/: RawAACFrame.cs  RawG711AFrame.cs  RawG711Frame.cs  RawG711UFrame.cs  RawG726Frame.cs  RawPCMFrame.cs  RawaudioFrame.cs
RtspClientSharpCore/RtspClientSharpCore/RawFrames/Video/: RawH264Frame.cs  RawH264IFrame.cs  RawH264PFrame.cs  RawJpegFrame.cs  RawVideoFrame.cs
RtspClientSharpCore/RtspClientSharpCore/Rtcp/: IRtcpSenderStatisticsProvider.cs  ISerializablePacket.cs  RtcpByePacket.cs  RtcpPacket.cs  RtcpReceiverReportPacket.cs  RtcpReceiverReportsProvider.cs  RtcpReportBlock.cs  RtcpSdesChunk.cs  RtcpSdesItem.cs  RtcpSdesNameItem.cs  RtcpSdesReportPacket.cs  RtcpSenderReportPacket.cs  RtcpStream.cs
RtspClientSharpCore/RtspClientSharpCore/Rtp/: IRtpSequenceAssembler.cs  IRtpStatisticsProvider.cs  RtpPacket.cs  RtpSequenceAssembler.cs  RtpStream.cs
RtspClientSharpCore/RtspClientSharpCore/Rtsp/: Constants.cs  HeadersParser.cs  HttpBadResponseCodeException.cs  HttpBadResponseException.cs  IRtspTransportClient.cs  RtspBadResponseCodeException.cs  RtspBadResponseException.cs  RtspClientException.cs  RtspClientInternal.cs  RtspHttpTransportClient.cs  RtspMessage.cs  RtspMethod.cs  RtspParseResponseException.cs  RtspRequestMessage.cs  RtspRequestMessageFactory.cs  RtspResponseMessage.cs  RtspStatusCode.cs  RtspTcpTransportClient.cs  RtspTransportClient.cs  WellKnownHeaders.cs
RtspClientSharpCore/RtspClientSharpCore/Rtsp/Authentication/: Authenticator.cs  BasicAuthenticator.cs  DigestAuthenticator.cs  MD5.cs
RtspClientSharpCore/RtspClientSharpCore/Sdp/: RtspMediaTrackInfo.cs  RtspTrackInfo.cs  SdpParser.cs  SdpParserException.cs
RtspClientSharpCore/RtspClientSharpCore/Tpkt/: TpktHeader.cs  TpktPayload.cs  TpktStream.cs
RtspClientSharpCore/RtspClientSharpCore/Utils/: ArraySegmentExtensions.cs  ArrayUtils.cs  BigEndianConverter.cs  BitStreamReader.cs  ChunksArray.cs  Delegates.cs  Hex.cs  NetworkClientFactory.cs  NetworkCredentialExtensions.cs  RandomGeneratorFactory.cs  SimpleHybridLock.cs  StreamExtensions.cs  SystemMemory.cs  TaskExtensions.cs  TimeUtils.cs
RtspClientSharpCore/TestRtspClient/: FrameDecoder.cs  FrameTransformer.cs  Program.cs  TestRtspClient.csproj
RtspClientSharpCore/TestSnapshotMakerCore/: Program.cs  TestSnapshotMakerCore.csproj
RtspClientSharpCore/libffmpeghelper/x64/Release/: libffmpeghelper.exp  libffmpeghelper.iobj  libffmpeghelper.ipdb  libffmpeghelper.lib
RtspClientSharpCore/libffmpeghelper/x64/Release/libffmpeghelper.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  libffmpeghelper.lastbuildstate  libffmpeghelper.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
RtspClientSharpCore/libffmpeghelper/x86/Debug/: libffmpeghelper.exp  libffmpeghelper.ilk  libffmpeghelper.lib  vc142.idb
RtspClientSharpCore/libffmpeghelper/x86/Debug/libffmpeghelper.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  libffmpeghelper.lastbuildstate  libffmpeghelper.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
RtspClientSharpCore/libffmpeghelper/x86/Release/: libffmpeghelper.exp  libffmpeghelper.iobj  libffmpeghelper.ipdb  libffmpeghelper.lib
RtspClientSharpCore/libffmpeghelper/x86/Release/libffmpeghelper.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  libffmpeghelper.lastbuildstate  libffmpeghelper.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
ffmpeghelper_nix/: CMakeLists.txt  export.h  stdafx.h  videodecoding.cpp
